[tool.poetry]
name = "python-crumbles"
version = "0.1.0"
description = "Small bits of exploratory code"
authors = ["Aaron Imbrock"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
